# Haskell

./: .gitignore  CHANGELOG.md  Haskell.cabal  LICENSE  Run.txt  readme.md
1_Logging/app/: Main.hi
1_Logging/dist-newstyle/cache/: config  improved-plan  source-hashes
2_Functions/app/: Main.hi  Main.hs
3_Typeclasses/app/: Main.hi  Main.hs
3_Typeclasses/dist-newstyle/cache/: solver-plan
4_Pattern_Matching/: LICENSE
4_Pattern_Matching/app/: Main.hi  Main.hs
4_Pattern_Matching/dist-newstyle/cache/: compiler  elaborated-plan
5_List_Manipulation/app/: Main.hi  Main.hs
6_Monads_and_IO/: CHANGELOG.md
6_Monads_and_IO/app/: Main.hi  Main.hs
6_Monads_and_IO/dist-newstyle/cache/: up-to-date
7_Modules_and_Packages/: x1-Logging.cabal
7_Modules_and_Packages/app/: Main.hi  Main.hs  MyModule.hi  MyModule.hs
7_Modules_and_Packages/dist-newstyle/cache/: plan.json
8_Error_Handling/app/: Main.hi  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
exe/: App.hs
