cabal-version:      3.0
name:               Haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Frost Lord
maintainer:         51778028+Frost-Lord@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Haskell
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          App.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    
    - base ^>=4.16.4.0
    - random ^>= 1.2.1

    -- Directories containing source files.
    hs-source-dirs:   exe

    -- Base language which the package is written in.
    default-language: Haskell2010
